Fix T99565: Cycles reading TGA files with alpha different than Blender

Thanks to Lukas for tracking down the cause in OIIO.